--- a/pom.xml
+++ b/pom.xml
@@ -296,6 +296,21 @@
     </build>
 
     <dependencies>
+        <!-- Jackson -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.5.1</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.5.1</version>
+            <scope>provided</scope>
+        </dependency>
+
         <!-- inherited -->
         <dependency>
             <groupId>javax.jcr</groupId>
